fix tma map overlaping problem
git-svn-id: https://code.oicr.on.ca/svn/biomart/biomart-java/branches/release-0_8-candidate_7@9690 8dd1c8d6-c59f-4bb3-b62a-300035dbf9e7

--- a/web/webapps/martapps/css/v1/data.css
+++ b/web/webapps/martapps/css/v1/data.css
@@ -562,7 +562,7 @@ iframe.streaming {
 }
 .biomart .tmamap {
 	position: relative;
-	height: 400px;
+	height: 600px;
 	/*width: 1000px;*/
 }
 .biomart .tmamap canvas{
